--- a/frontend/successForm.html
+++ b/frontend/successForm.html
@@ -4,7 +4,7 @@
 	<head> </head>
 	<body>
 		<h2> Issa party issa party </h2>
-		<p> As you well know, you gonna have to link sql eventually </p>
+		<p> yoyoyo </p>
 		
 	</body>
 
