--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 		<input type="text" name="password" placeholder="password">
 		<input type="submit" value="Submit">
 		</form>
-		<form method="POST" action="/register">
+		<form method="GET" action="/register">
 			<input type="submit" value="register">
 		</form>
 		</form>
