--- a/frontend/register.html
+++ b/frontend/register.html
@@ -3,7 +3,7 @@
 	<head> </head>
 	<body>
 		<h2> Register Form </h2>
-		<form method="POST" action="/register">
+		<form method="POST" action="/">
 		<input type="text" name="username" placeholder="username">
 		<br> </br>
 		<input type="text" name="password" placeholder="password">
