Next to do is db work w lyrics

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,11 +5,11 @@
 		<h2> Login Form1 </h2>
 		<form method="POST" action="/login">
 		<input type="text" name="username" placeholder="username">
-		<input type="text" name="password" placeholder="password">
+		<input type="password" name="password" placeholder="password">
 		<input type="submit" value="Submit">
 		</form>
 		<form method="GET" action="/register">
-			<input type="submit" value="register">
+			<input type="submit" value="Register">
 		</form>
 		</form>
 	</body>
