--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -1,14 +1,32 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head> </head>
+	<head> 
+		<title> Hello! Welcome to Ryan's Genius Database </title>
+		<link rel="stylesheet" type="text/css" href="homepage.css" />
+	</head>
 	<body>
-		<form method="GET" action="/savedlyrics">
-		<input type="submit" value="Saved Lyrics">
-		</form>
-		<form method="POST" action="/pulllyrics">
-		<input type="submit" value="Get Lyrics">
-	
+		<div id="container">
+			<div id="header">
+			</div>
+			<div id="content">
+				<div id="nav">
+					<h3> Navigation  </h3>
+					<ul>
+						<li> <a class="selected" href="">Home </a> </li>
+						<li> <a class="unselected" href=""> About </a> </li>
+						<li> <a class="unselected"  href=""> Contact </a> </li>
+						<li> <a class="unselected" href="http://localhost:8080/pulllyrics">Get Lyrics </a> </li>
+					</ul>
+			</div>
+			<div id="main">
+			<ul>
+				<form method="GET" action="/savedlyrics">
+				<li> <a class="SongTitle" href="">1st Song </a> </li>
+				<li> <a class="SongTitle" href="">2nd Song </a> </li>
+				<li> <a class="SongTitle" href="">3rd Song </a> </li>
+			</ul> </form>
+			</div>
 	</body>
 
 </html>
