--- a/frontend/register.html
+++ b/frontend/register.html
@@ -6,7 +6,7 @@
 		<form method="POST" action="/">
 		<input type="text" name="username" placeholder="username">
 		<br> </br>
-		<input type="text" name="password" placeholder="password">
+		<input type="password" name="password" placeholder="password">
 		<input type="submit" value="Submit">
 		</form>
 	</body>
