--- a/frontend/pullLyrics.html
+++ b/frontend/pullLyrics.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 	<html>
 		<body> 
-			<form method="GET" action="/homepage">
-				<input type="submit" name="Return" placeholder="Return"> 
+			<form method="POST" action="/homepage">
+				<input type="submit" name="Return" value="Return"> 
 			</form>	
 			<form method="POST" action="/pulllyrics">
 				<input type="text" placeholder="title" name="title">
