--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head> 
+	<head>
+
 		<title> Homepage </title>
 		<link rel="stylesheet" type="text/css" href="homepage.css" />
-		<meta name="keywords" content="golang,pagser,goquery,html,page,parser,colly">
+		<script src="jquery-3.5.1.min.js" type="text/javascript"></script>
+		<script src="../backend/artist.json" type="text/javascript"></script>
 	</head>
 
 	<body>
@@ -22,13 +24,16 @@
 					</ul>
 			</div>
 			<div class="main">
-			<ul>
-				<form method="GET" action="/savedlyrics">
-				<li> <a class="SongTitle" runat="server" href="">1st Song </a> </li>
-				<li> <a class="SongTitle" runat="server" href="">2nd Song </a> </li>
-				<li> <a class="SongTitle" runat="server" href="">3rd Song </a> </li>
+				<ul> 
+				<form id="SongList" onload="getJSON()" method="GET" action="/savedlyrics">
+				<li> <a id="Song1" name="Song1" class="SongTitle" runat="server" href="">1st Song </a> </li>
+				<li> <a id="Song2" name="Song2" class="SongTitle" runat="server" href="">2nd Song </a> </li>
+				<li> <a id="Song3" name="Song3" class="SongTitle" runat="server" href="">3rd Song </a> </li>
 			</ul> </form>
 			</div>
+			<script> document.getElementById("Song1").innerHTML = Row1 </script>
+			<script> document.getElementById("Song2").innerHTML = Row2 </script>
+			<!-- <script> document.getElementById("Song").innerHTML = "Halftime - Nas"; </script> -->
 	</body>
 
 </html>
