--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 	<body>
 		<h2> Login Form1 </h2>
 		<form method="POST" action="/login">
-		<input type="text" name="username" placeholder="username">
+		<input type="text" name="email" placeholder="email">
 		<input type="password" name="password" placeholder="password">
 		<input type="submit" value="Submit">
 		</form>
