--- a/frontend/register.html
+++ b/frontend/register.html
@@ -4,7 +4,7 @@
 	<body>
 		<h2> Register Form </h2>
 		<form method="POST" action="/">
-		<input type="text" name="username" placeholder="username">
+		<input type="text" name="email" placeholder="email">
 		<br> </br>
 		<input type="password" name="password" placeholder="password">
 		<input type="submit" value="Submit">
